[package]
name = "tokio-signals"
version = "0.1.0"
edition = "2025"
authors = ["Cameron Dunn camerondunn.net"]
description = "Implements pub/sub Signals in Rust"
license = "MIT"
repository = "https://github.com/tokio-signals"
keywords = ["tokio", "signals", "async"]

[dependencies]
serde = "1.0.228"
serde_json = "1.0.145"
tokio = {version = "1.48.0", features = ["sync", "rt-multi-thread"]}
